kubernetes/k8s/auth-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    app: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - env:
            - name: AUTH_API_PORT
              value: "8000"
            - name: JWT_SECRET
              value: PRFT
            - name: USERS_API_ADDRESS
              value: http://users-api-svc.default.svc.cluster.local:8083
            - name: ZIPKIN_URL
              value: http://zipkin-svc.default.svc.cluster.local:9411/api/v2/spans
          image: 9805/auth-api
          name: auth-api
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-svc
  labels:
    app: auth-api
spec:
  selector:
    app: auth-api
  type: NodePort
  ports:
    - name: "http"
      port: 8000
