kubernetes/k8s/redis-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-db
  name: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
        - image: redis:7.0
          name: redis-db
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-db-svc
  labels:
    app: redis-db
spec:
  selector:
    app: redis-db
  type: NodePort
  ports:
    - name: "http"
      port: 6379
