kubernetes/k8s/todos-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todos-api
  name: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: PRFT
            - name: REDIS_CHANNEL
              value: log_channel
            - name: REDIS_HOST
              value: redis-db-svc.default.svc.cluster.local
            - name: REDIS_PORT
              value: "6379"
            - name: TODO_API_PORT
              value: "8082"
            - name: ZIPKIN_URL
              value: http://zipkin-svc.default.svc.cluster.local:9411/api/v2/spans
          image: 9805/todos-api
          name: todos-api
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api-svc
  labels:
    app: todos-api
spec:
  selector:
    app: todos-api
  type: NodePort
  ports:
    - name: "http"
      port: 8082
