kubernetes/k8s/users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users-api
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: PRFT
            - name: SERVER_PORT
              value: "8083"
            - name: SPRING_ZIPKIN_BASE_URL
              value: http://zipkin-svc.default.svc.cluster.local:9411/api/v2/spans
          image: 9805/users-api
          name: users-api
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: users-api-svc
  labels:
    app: users-api
spec:
  selector:
    app: users-api
  type: NodePort
  ports:
    - name: "http"
      port: 8083
