kubernetes/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - env:
            - name: AUTH_API_ADDRESS
              value: http://auth-api-svc.microservices.svc.cluster.local:8000
            - name: PORT
              value: "8080"
            - name: TODOS_API_ADDRESS
              value: http://todos-api-svc.microservices.svc.cluster.local:8082
            - name: ZIPKIN_URL
              value: http://zipkin-svc.microservices.svc.cluster.local:9411/api/v2/spans
          image: 9805/frontend
          name: frontend
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - name: "http"
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: frontend-ing
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: frontend-rampup-app.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 8080
