kubernetes/k8s/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin
          name: zipkin
          ports:
            - containerPort: 9411
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
  labels:
    app: zipkin
spec:
  selector:
    app: zipkin
  type: NodePort
  ports:
    - name: "http"
      port: 9411
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: zipkin-ing
  labels:
    app: zipkin
spec:
  ingressClassName: nginx
  rules:
    - host: zipkin-rampup-app.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin-svc
                port:
                  number: 9411
